--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hello world
+---
+layout: default
+title: Tue Nguyen, Savvycom JSC
+---
+
+		<div class="blurb">
+			<h1>Hi there, I'm Tue Nguyen!</h1>
+			<p>I'm a iOS &amp; Mac Developer. <a href="/about">Read more about my life...</a></p>
+		</div> 
