- add active projects

--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@ layout: default
 title: Tue Nguyen, Savvycom JSC
 ---
 
-		<div class="blurb">
-			<h1>Hi there, I'm Tue Nguyen!</h1>
-			<p>I'm a iOS &amp; Mac Developer. <a href="/about">Read more about my life...</a></p>
-		</div> 
+<div class="blurb">
+	<h1>Hi there, I'm Tue Nguyen!</h1>
+	<p>I'm a iOS &amp; Mac Developer. <a href="/about">Read more about my life...</a></p>
+	<div>
+		<h2>My Active Projects</h2>
+		<h3><a href="https://github.com/tue-savvy/SimulatorManager">Simulator Manager</a></h3>
+		<p>
+		Simple Mac Application to perform quick access iOS Simulator Application data.
+		</p>
+		<h3><a href="https://github.com/tue-savvy/IPAExporter">IPA Exporter</a></h3>
+		<p>
+		Mac Application used to export IPA from Xcode Archive.
+		</p>
+	</div>
+</div>
